# mineral-database

./: .gitignore  OPTIMIZATIONS.md  README.md  cdl-audit-report.json  minerals.db  mkdocs.yml  package-lock.json  pyproject.toml  validate_cdl.py
.github/workflows/: ci.yml  npm-publish.yml  pypi-publish.yml
data/: minerals.db  minerals_fixed.db  minerals_legacy_20260125.db  minerals_pre_crystaledges_backup.db  minerals_v1.2.3.db  minerals_with_models.db
data/archive/: beryl-tabular.yaml  chrysoberyl-trilling.yaml  corundum-barrel.yaml  fluorite-cuboctahedron.yaml  fluorite-twin.yaml  garnet-trapezohedron.yaml  pyrite-iron-cross.yaml  quartz-brazil-twin.yaml  quartz-dauphine-twin.yaml  quartz-japan-twin.yaml  quartz-scepter.yaml  spinel-macle.yaml  staurolite-cross-90.yaml  topaz-tabular.yaml
data/source/composites/: garnet-topped-doublet.yaml  opal-doublet.yaml  opal-triplet.yaml  soude-emerald.yaml
data/source/minerals/: actinolite.yaml  alexandrite.yaml  almandine.yaml  amazonite.yaml  amethyst.yaml  ametrine.yaml  andalusite.yaml  andesine.yaml  andradite.yaml  apatite.yaml  aquamarine.yaml  aragonite.yaml  augite.yaml  azurite.yaml  barite.yaml  benitoite.yaml  beryl-tabular.yaml  beryl.yaml  bronzite.yaml  bytownite.yaml  calcite-nailhead.yaml  calcite-rhomb.yaml  calcite-scalenohedron.yaml  calcite.yaml  cassiterite.yaml  celestine.yaml  chalcedony.yaml  chrome-diopside.yaml  chrysoberyl.yaml  chrysocolla.yaml  citrine.yaml  colour-change-garnet.yaml  coral.yaml  corundum-barrel.yaml  corundum.yaml  crocoite.yaml  cuprite.yaml  demantoid.yaml  diamond-cube.yaml  diamond-macle.yaml  (+98 more)
data/source/simulants/: ambroid.yaml  bone.yaml  copal.yaml  cubic-zirconia.yaml  dyed-howlite.yaml  dyed-magnesite.yaml  french-jet.yaml  ggg.yaml  glass-simulant.yaml  luag.yaml  moissanite.yaml  reconstructed-turquoise.yaml  slocum-stone.yaml  strontium-titanate.yaml  synthetic-coral.yaml  synthetic-lapis-gilson.yaml  synthetic-rutile.yaml  synthetic-turquoise-gilson.yaml  vulcanite.yaml  yag.yaml
data/source/synthetics/: synthetic-alexandrite-czochralski.yaml  synthetic-alexandrite-flux.yaml  synthetic-alexandrite-hydrothermal.yaml  synthetic-diamond-cvd.yaml  synthetic-diamond-hpht.yaml  synthetic-emerald-flux.yaml  synthetic-emerald-hydrothermal.yaml  synthetic-emerald-lechleitner.yaml  synthetic-opal-gilson.yaml  synthetic-paraiba.yaml  synthetic-quartz-hydrothermal.yaml  synthetic-ruby-flux.yaml  synthetic-ruby-hydrothermal.yaml  synthetic-ruby-kashan-flux.yaml  synthetic-ruby-verneuil.yaml  synthetic-sapphire-czochralski.yaml  synthetic-sapphire-flux.yaml  synthetic-sapphire-verneuil.yaml  synthetic-spinel-verneuil.yaml
docs/: api.md  cli.md  examples.md  index.md  models.md
npm-package/: index.d.ts  index.js  minerals.db  package.json
scripts/: build_db.py  generate_models.py  migrate_to_families.py  validate_cdl.py
src/mineral_database/: __init__.py  cli.py  compat.py  db.py  models.py  queries.py
src/mineral_database/data/: minerals.db
tests/: test_cli.py  test_database.py  test_enrichment.py  test_synthetics.py
