[project]
name = "mineral-database"
version = "0.1.0"
description = "Part of the Gemmology Project"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://mineral-database.gemmology.dev"
Repository = "https://github.com/gemmology-dev/mineral-database"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
