[project]
name = "gemmology-mineral-database"
version = "1.0.0"
description = "Crystal presets database for gemmological and mineralogical visualization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Fabian Schuh", email = "fabian@gemmology.dev" }
]
maintainers = [
    { name = "Fabian Schuh", email = "fabian@gemmology.dev" }
]
keywords = [
    "mineralogy",
    "gemmology",
    "crystallography",
    "gemstones",
    "crystals",
    "database",
    "presets",
    "visualization"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed"
]
dependencies = []

[project.urls]
Homepage = "https://mineral-database.gemmology.dev"
Documentation = "https://mineral-database.gemmology.dev/docs"
Repository = "https://github.com/gemmology-dev/mineral-database"
Issues = "https://github.com/gemmology-dev/mineral-database/issues"
Changelog = "https://github.com/gemmology-dev/mineral-database/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pyyaml>=6.0"
]
yaml = ["pyyaml>=6.0"]

[project.scripts]
mineral-db = "mineral_database.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mineral_database = ["py.typed", "data/*.db"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["mineral_database"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/mineral_database"]
branch = true
